--- a/-new-material-templates/release-notes-template/ROOT/pages/<x.y[.z]>-release-notes.adoc
+++ b/-new-material-templates/release-notes-template/ROOT/pages/<x.y[.z]>-release-notes.adoc
@@ -79,6 +79,16 @@ The following Premium plugin has been announced as reaching its end-of-life:
 {productname}’s xref:<plugincode>.adoc[<Premium plugin name eol>] plugin will be deactivated on <month> <DD>, <YYYY>, and is no longer available for purchase.
 
 
+[[accompanying-open-source-plugin-end-of-life-announcement]]
+== Accompanying open source plugin end-of-life announcement
+
+The following open source plugin has been announced as reaching its end-of-life:
+
+=== <Open source plugin name eol>
+
+{productname}’s xref:<plugincode>.adoc[<Open source plugin name eol>] plugin will be deactivated on <month> <DD>, <YYYY>, and is no longer available for purchase.
+
+
 [[accompanying-enhanced-skins-and-icon-packs-changes]]
 == Accompanying Enhanced Skins & Icon Packs changes
 
@@ -107,15 +117,29 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 [[additions]]
 == Additions
 
-{productname} <x.y[.z]> also includes the following additions:
+{productname} <x.y[.z]> also includes the following addition<s>:
 
 === <TINY-vwxyz 1 changelog entry>
 //#TINY-vwxyz1
 
 // CCFR here.
 
+
 [[changes]]
 == Changes
+
+{productname} <x.y[.z]> also includes the following change<s>:
+
+=== <TINY-vwxyz 1 changelog entry>
+//#TINY-vwxyz1
+
+// CCFR here.
+
+
+[[removed]]
+== Removed
+
+{productname} <x.y[.z]> also includes the following removal<s>:
 
 === <TINY-vwxyz 1 changelog entry>
 //#TINY-vwxyz1
@@ -133,6 +157,7 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 
 // CCFR here.
 
+
 [[security-fixes]]
 == Security fixes
 
@@ -143,8 +168,11 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 
 // CCFR here.
 
+
 [[deprecated]]
 == Deprecated
+
+{productname} <x.y[.z]> includes the following deprecation<s>:
 
 === The `<plugin>` configuration property, `<name>`, has been deprecated
 
