DOC-2327 TinyMCE 7.0 documentation clean up (#3165)
* Clean up `nav.adoc`

* Clean up `7.0-release-notes.adoc` headings (excluding `Security fixes`, `Deprecated`, and `Known issues`, as these are still being worked on) as well as `Overview` heading links

* move `template` plugin removal from `Removed` section to `Accompanying open source plugin end-of-life announcement` section

* re-order entries according to https://github.com/tinymce/tinymce/blob/main/.changes/tinymce/7.0.0.md

* add admonition about Templates plugin rename to `Accompanying Premium plugin changes`

* move TINY-10389 from `Accompanying Premium plugin changes` to `Bug fixes` and other small fixes

* add release note entry for TINY-10646

* add release note entry for TINY-9154 (need to add demo)

* DOC-2327: copy edits and fixing links.

* DOC-2327: add known issues, removal of option tables in new plugin documentation.

* DOC-2327: add example for Non-breaking spaces in known issues.

* Update modules/ROOT/pages/7.0-release-notes.adoc

* DOC-2327: copy edits, known issues.

* Update modules/ROOT/pages/7.0-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/7.0-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/7.0-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/7.0-release-notes.adoc

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

* Update modules/ROOT/pages/7.0-release-notes.adoc

* DOC-2327: add gotoline shortcut to advcode shortcuts.adoc.

* DOC-2327: revert removal of remove trailing brs option, updated known issues.

* DOC-2327: final copy edits, updating changelog.adoc.

---------

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>
Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/-new-material-templates/release-notes-template/ROOT/pages/<x.y[.z]>-release-notes.adoc
+++ b/-new-material-templates/release-notes-template/ROOT/pages/<x.y[.z]>-release-notes.adoc
@@ -79,6 +79,16 @@ The following Premium plugin has been announced as reaching its end-of-life:
 {productname}’s xref:<plugincode>.adoc[<Premium plugin name eol>] plugin will be deactivated on <month> <DD>, <YYYY>, and is no longer available for purchase.
 
 
+[[accompanying-open-source-plugin-end-of-life-announcement]]
+== Accompanying open source plugin end-of-life announcement
+
+The following open source plugin has been announced as reaching its end-of-life:
+
+=== <Open source plugin name eol>
+
+{productname}’s xref:<plugincode>.adoc[<Open source plugin name eol>] plugin will be deactivated on <month> <DD>, <YYYY>, and is no longer available for purchase.
+
+
 [[accompanying-enhanced-skins-and-icon-packs-changes]]
 == Accompanying Enhanced Skins & Icon Packs changes
 
@@ -99,7 +109,7 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 {productname} <x.y[.z]> also includes the following improvement<s>:
 
 === <TINY-vwxyz 1 changelog entry>
-//#TINY-vwxyz1
+// #TINY-vwxyz1
 
 // CCFR here.
 
@@ -107,18 +117,32 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 [[additions]]
 == Additions
 
-{productname} <x.y[.z]> also includes the following additions:
+{productname} <x.y[.z]> also includes the following addition<s>:
 
 === <TINY-vwxyz 1 changelog entry>
-//#TINY-vwxyz1
+// #TINY-vwxyz1
 
 // CCFR here.
+
 
 [[changes]]
 == Changes
 
+{productname} <x.y[.z]> also includes the following change<s>:
+
 === <TINY-vwxyz 1 changelog entry>
-//#TINY-vwxyz1
+// #TINY-vwxyz1
+
+// CCFR here.
+
+
+[[removed]]
+== Removed
+
+{productname} <x.y[.z]> also includes the following removal<s>:
+
+=== <TINY-vwxyz 1 changelog entry>
+// #TINY-vwxyz1
 
 // CCFR here.
 
@@ -129,9 +153,10 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 {productname} <x.y[.z]> also includes the following bug fix<es>:
 
 === <TINY-vwxyz 1 changelog entry>
-//#TINY-vwxyz1
+// #TINY-vwxyz1
 
 // CCFR here.
+
 
 [[security-fixes]]
 == Security fixes
@@ -139,12 +164,15 @@ For information on using Enhanced Skins & Icon Packs, see: xref:enhanced-skins-a
 {productname} <x.y[.z]> includes <a fix | fixes for the following security issue<s>:
 
 === <TINY-vwxyz 1 changelog entry>
-//#TINY-vwxyz1
+// #TINY-vwxyz1
 
 // CCFR here.
 
+
 [[deprecated]]
 == Deprecated
+
+{productname} <x.y[.z]> includes the following deprecation<s>:
 
 === The `<plugin>` configuration property, `<name>`, has been deprecated
 
@@ -159,6 +187,6 @@ This section describes issues that users of {productname} <x.y[.z]> may encounte
 There <is one | are <number> known issue<s> in {productname} <x.y[.z]>.
 
 === <TINY-vwxyz 1 changelog entry>
-//#TINY-vwxyz1
+// #TINY-vwxyz1
 
 // CCFR here.
