--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -33,6 +33,7 @@ These release notes provide an overview of the changes for {productname} 7.0, in
 * xref:changes[Changes]
 * xref:removed[Removed]
 * xref:bug-fixes[Bug fixes]
+* xref:security-fixes[Security fixes]
 * xref:known-issues[Known issues]
 
 [NOTE]
@@ -790,6 +791,43 @@ As a consequence, after pasting, the cursor remained in the same position instea
 {productname} 7.0 addresses this, fixing the cursor calculation.
 
 Now, when using the `mceTablePasteRowAfter` command, `mceTablePasteColAfter` command, or `"Paste row after"` and `"Paste column after"` UI menu items, the cursor is correctly positioned in the newly pasted row or column as expected.
+
+[[security-fixes]]
+== Security fixes
+
+{productname} 7.0.0 includes two fixes for the following security issues:
+
+=== {productname} Cross-Site Scripting (XSS) vulnerability in handling iframes
+
+A cross-site scripting (XSS) vulnerability was discovered in {productname}'s content insertion code. This allowed `iframe` elements containing malicious code to execute when inserted into the editor. These `iframe` elements are restricted in their permissions by same-origin browser protections, but could still trigger operations such as downloading of malicious assets.
+
+{productname} 6.8.1 introduced a new xref:content-filtering.adoc#sandbox-iframes[sandbox iframes] boolean option which adds the `sandbox=""` attribute to every `iframe` element by default when enabled. This will prevent cross-origin, and in special cases same-origin, XSS by embedded resources in `iframe` elements. From {productname} 7.0.0 onwards the default value of this option is `true`.
+
+In {productname} 7.0.0 a new xref:content-filtering.adoc#sandbox-iframes-exclusions[`+sandbox_iframes_exclusions+`] option was also added, allowing a list of domains to be specified that should be excluded from having the `sandbox=""` attribute applied when the `sandbox_iframes` option is enabled. By default, this option is set to an array of domains that are provided in embed code by popular websites. To sandbox iframe elements from every domain, set this option to [].
+
+CVE: TBA.
+
+GHSA: https://github.com/tinymce/tinymce/security/advisories/GHSA-438c-3975-5x3f[GitHub Advisory].
+ 
+
+[NOTE]
+The HTTP Content-Security-Policy (CSP) `frame-src` or `object-src` can be configured to restrict or block the loading of unauthorized URLS. Refer to the xref:tinymce-and-csp.adoc[TinyMCE Content Security Policy Guide].
+
+=== {productname} Cross-Site Scripting (XSS) vulnerability in handling external SVG files through Object or Embed elements
+
+A link:https://owasp.org/www-community/attacks/xss/[cross-site scripting (XSS)] vulnerability was discovered in {productname}'s content loading and content inserting code. A SVG image could be loaded though an `object` or `embed` element and that image could potentially contain a XSS payload.
+
+{productname} 6.8.1 introduced a new xref:content-filtering.adoc#convert-unsafe-embeds[convert_unsafe_embeds] option to automatically convert `object` and `embed` elements respective of their type attribute. From {productname} 7.0.0 onwards, the `convert_unsafe_embeds` option is enabled by default.
+
+[NOTE]
+If you are using {productname} 6.8.1 or higher, set `convert_unsafe_embeds` to `true`. For any earlier versions, a custom NodeFilter is recommended to remove or modify any `object` or `embed` elements. This can be added using the `editor.parser.addNodeFilter` and `editor.serializer.addNodeFilter` APIs.
+
+CVE: TBA.
+
+GHSA: https://github.com/tinymce/tinymce/security/advisories/GHSA-5359-pvf2-pw78[GitHub Advisory].
+ 
+NOTE: Tiny Technologies would like to thank Toni Huttunen of link:https://www.fraktal.fi/[Fraktal Oy] for discovering this vulnerability.
+
 
 [[known-issues]]
 == Known issues
