--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -413,6 +413,7 @@
 **** xref:7.2-release-notes.adoc#additions[Additions]
 **** xref:7.2-release-notes.adoc#changes[Changes]
 **** xref:7.2-release-notes.adoc#bug-fixes[Bug fixes]
+**** xref:7.2-release-notes.adoc#security-fixes[Security fixes]
 *** {productname} 7.1.2
 **** xref:7.1.2-release-notes.adoc#overview[Overview]
 **** xref:7.1.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
